--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: linear-gradient(149deg, #262c52, #1f212d);
+  background: linear-gradient(149deg, #f7f7f7, #fbfbfb);
   min-height: 100vh;
 }
 
